<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speech-Assist</string>
    <string name="action_settings">Settings</string>
    <string name="speak">Speak</string>
    <string name="main_input">Enter text here</string>
    <string name="clear">Clear</string>
    <string name="the">the</string>
    <string name="be">be</string>
    <string name="to">to</string>
    <string name="of">of</string>
    <string name="and">and</string>
    <string name="a">a</string>
    <string name="in">in</string>
    <string name="that">that</string>
    <string name="have">have</string>
    <string name="I">I</string>
    <string name="it">it</string>
    <string name="but">but</string>
    <string name="not">not</string>
    <string name="on">on</string>
    <string name="with">with</string>
    <string name="he">he</string>
    <string name="as">as</string>
    <string name="you">you</string>
    <string name="his">his</string>
    <string name="at">at</string>
    <string name="by">by</string>
    <string name="menu_about">about</string>
    <string name="version">Version 1.0.9.1</string>
    <string name="codename">Codename Break the ICE</string>
    <string name="copyright">Copyright \u00a9 2014 St Aloysius College</string>
    <string name="website">www.speech-assist.com</string>
    <string name="keyboard">Disable Swipe Action Keyboard</string>
    <string name="longpress">Change "'Touch and Hold Delay'" To Make Pressing Buttons Easier</string>
    <string name="changeaccent">Change Accent</string>
    <string name="from">from</string>
    <string name="they">they</string>
    <string name="we">we</string>
    <string name="say">say</string>
    <string name="her">her</string>
    <string name="she">she</string>
    <string name="or">or</string>
    <string name="an">an</string>
    <string name="will">will</string>
    <string name="my">my</string>
    <string name="one">one</string>
    <string name="all">all</string>
    <string name="would">would</string>
    <string name="there">there</string>
    <string name="their">their</string>
    <string name="what">what</string>
    <string name="so">so</string>
    <string name="up">up</string>
    <string name="out">out</string>
    <string name="time">time</string>
    <string name="about">about</string>
    <string name="who">who</string>
    <string name="get">get</string>
    <string name="which">which</string>
    <string name="go">go</string>
    <string name="me">me</string>
    <string name="when">when</string>
    <string name="make">make</string>
    <string name="can">can</string>
    <string name="like">like</string>
    <string name="speed">Change Pace For Spoken Word</string>

</resources>
